--- a/src/main/webapp/script/area/Edit.xhtml
+++ b/src/main/webapp/script/area/Edit.xhtml
@@ -7,15 +7,36 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:pe="http://primefaces.org/ui/extensions">
 
-    <ui:composition template="/script/template_inbox.xhtml">
+    <ui:composition template="/script/template_inbox_bootstrap_config.xhtml">
         <ui:define name="title">
-            <p:outputLabel value="#{bundle.EditAreaTitle}"/>
+            <h:outputText value="#{bundle.EditAreaTitle}"/>
         </ui:define>
 
-        <ui:define name="west">
+        <ui:define name="help">
           <ui:include src="help.xhtml"/>
         </ui:define>
 
+         <ui:define name="content_header">
+            <script>
+                var init = [];
+                init.push(function () {
+                    $('body').addClass('mmc');
+                });
+            </script>
+        <!-- page-header -->
+            <div class="page-header">
+                <div class="row">
+                    <div class="col-sm-6 col-xs-12">
+                        <h1><i class="fa fa-building page-header-icon"></i>&nbsp;&nbsp;#{bundle.EditAreaTitle}</h1>
+                        <p:commandLink title="Help" onclick="PF('helpDialog').show()" styleClass="text-info" >
+                            <i class="fa fa-info-circle"/>
+                        </p:commandLink> 
+                    </div>
+                    
+                </div>
+            </div><!-- / .page-header --> 
+        </ui:define>
+        
         <ui:define name="body">
 
             <h:form id="form">
