--- a/src/main/webapp/script/vista/List.xhtml
+++ b/src/main/webapp/script/vista/List.xhtml
@@ -58,9 +58,9 @@
                                 <button type="button" class="btn dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bars"></i></button>
                                 <ul class="dropdown-menu">
                                     <li>
-                                        <h:commandLink action="#{vistaController.prepareCreate}" 
-                                                       value="Agregar"
-                                                       title="Agregar/Crear nuevo">
+                                        <h:commandLink action="#{vistaController.prepareCreateVista}" 
+                                                       value="Crear nueva Vista"
+                                                       title="Agregar/Crear nueva">
                                         </h:commandLink>
                                     </li>
                                 </ul>
