--- a/src/main/webapp/script/rol/Create.xhtml
+++ b/src/main/webapp/script/rol/Create.xhtml
@@ -6,44 +6,61 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core">
 
-    <ui:composition template="/script/template_inbox.xhtml">
+    <ui:composition template="/script/template_inbox_bootstrap_config.xhtml">
         <ui:define name="title">
             <h:outputText value="#{bundle.CreateRolTitle}"></h:outputText>
         </ui:define>
-        <ui:define name="west">
-            <p:accordionPanel multiple="true" cache="true" id="accionesaccordion1">
-                <p:tab title="Roles" id="accionestab1">
-                    <h:outputLabel escape="false" value="#{bundle.ayudaRoles}"/>
-                </p:tab>
-            </p:accordionPanel>
+        <ui:define name="help">
+            <h:outputText escape="false" value="#{bundle.ayudaRoles}"/>
         </ui:define>
+
+        <ui:define name="content_header">
+            <script>
+                var init = [];
+                init.push(function () {
+                    $('body').addClass('mmc');
+                });
+            </script>
+            <!-- page-header -->
+            <div class="page-header">
+                <div class="row">
+                    <div class="col-sm-6 col-xs-12">
+                        <h1><i class="fa fa-key page-header-icon"></i>&nbsp;&nbsp;#{bundle.CreateRolTitle}</h1>
+                        <p:commandLink title="Help" onclick="PF('helpDialog').show()" styleClass="text-info" >
+                            <i class="fa fa-info-circle"/>
+                        </p:commandLink> 
+                    </div>
+
+                </div>
+            </div><!-- / .page-header --> 
+        </ui:define>
+
         <ui:define name="body">
 
             <h:form>
-                <p:panel header="#{bundle.CreateRolTitle}">
 
-                    <h:panelGrid columns="2">
-                        <h:outputLabel value="#{bundle.EditRolLabel_idRol}" for="idRol" style="font-weight:bold"/>
-                        <p:inputText id="idRol" value="#{rolController.selected.idRol}" title="#{bundle.EditRolTitle_idRol}" required="true" requiredMessage="#{bundle.EditRolRequiredMessage_idRol}"/>
-                        <h:outputLabel value="#{bundle.EditRolLabel_nombre}" for="nombre" style="font-weight:bold"/>
-                        <p:inputText id="nombre" value="#{rolController.selected.nombre}" required="true" requiredMessage="El nombre del Rol es Requerido." title="#{bundle.EditRolTitle_nombre}" />
-                        <h:outputLabel value="#{bundle.EditRolLabel_descripcion}" for="descripcion" style="font-weight:bold"/>
-                        <p:inputTextarea cols="30" rows="2" maxlength="40" id="descripcion" value="#{rolController.selected.descripcion}" title="#{bundle.EditRolTitle_descripcion}" />
-                        <h:outputLabel value="Funciones:" for="descripcion" style="font-weight:bold"/>
-                        <p:selectManyCheckbox converter="FuncionConverter" value="#{rolController.selected.funcionList}" layout="pageDirection">
-                            <f:selectItems  value="#{funcionController.itemsAvailableSelectMany}" itemLabel="nombre" itemValue="idFuncion"/>
-                        </p:selectManyCheckbox>
+                <h:panelGrid columns="2">
+                    <h:outputLabel value="#{bundle.EditRolLabel_idRol}"  for="idRol" style="font-weight:bold"/>
+                    <h:inputText id="idRol" styleClass="form-control" value="#{rolController.selected.idRol}" title="#{bundle.EditRolTitle_idRol}" required="true" requiredMessage="#{bundle.EditRolRequiredMessage_idRol}"/>
+                    <h:outputLabel value="#{bundle.EditRolLabel_nombre}" for="nombre" style="font-weight:bold"/>
+                    <h:inputText id="nombre" styleClass="form-control" value="#{rolController.selected.nombre}" required="true" requiredMessage="El nombre del Rol es Requerido." title="#{bundle.EditRolTitle_nombre}" />
+                    <h:outputLabel value="#{bundle.EditRolLabel_descripcion}" for="descripcion" style="font-weight:bold"/>
+                    <p:inputTextarea cols="30" rows="2" maxlength="40" styleClass="form-control"
+                                     id="descripcion" value="#{rolController.selected.descripcion}" title="#{bundle.EditRolTitle_descripcion}" />
+                    <h:outputLabel value="Funciones:" for="descripcion" style="font-weight:bold"/>
+                    <p:selectManyCheckbox converter="FuncionConverter"  
+                                          value="#{rolController.selected.funcionList}" layout="pageDirection">
+                        <f:selectItems  value="#{funcionController.itemsAvailableSelectMany}" itemLabel="nombre" itemValue="idFuncion"/>
+                    </p:selectManyCheckbox>
 
-                    </h:panelGrid>
+                </h:panelGrid>
 
-                    <f:facet name="footer">
-                        <p:commandButton action="#{rolController.create}" value="#{bundle.CreateRolSaveLink}" ajax="false" icon="ui-icon-disk" rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}"/>                     
-                        <p:commandButton action="#{rolController.prepareList}" value="#{bundle.CreateRolShowAllLink}" immediate="true" ajax="false" icon="ui-icon-folder-open"/>
-                    </f:facet> 
+                <p:commandButton action="#{rolController.prepareList}" value="#{bundle.Cancel}" immediate="true" ajax="false" icon="ui-icon-folder-open"/>
 
+                <p:commandButton action="#{rolController.create}" value="#{bundle.CreateRolSaveLink}" ajax="false" icon="ui-icon-disk" rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}"/>                     
 
 
-                </p:panel>
+
             </h:form>
         </ui:define>
     </ui:composition>
