--- a/src/main/webapp/script/caso/Edit.xhtml
+++ b/src/main/webapp/script/caso/Edit.xhtml
@@ -219,7 +219,7 @@
                                                        styleClass="btn btn-primary"
                                                        onclick="jQuery(this).addClass('ui-state-disabled');
                                                                jQuery(this).children().addClass('fa fa-refresh fa-spin')"
-                                                       ajax="true" update="@this @(.panel) @(.ui-panel) @(form)" action="#{casoController.update}" >
+                                                                   ajax="true" update="@this @(.panel) @(.ui-panel) @(form)" actionListener="#{casoController.update}" >
                                             <i class=""></i> Guardar
                                         </p:commandLink>
                                     </div>
