--- a/src/main/webapp/script/template_inbox_bootstrap.xhtml
+++ b/src/main/webapp/script/template_inbox_bootstrap.xhtml
@@ -71,6 +71,17 @@
                         border-radius: 1px;
                     }
 
+                    .notaactualizado
+                    {
+                        font-weight: bold !important;
+                        background-color: #FFFFAA ! important;
+                        background: #FFFFAA ! important;
+                    }
+                    .actualizado
+                    {
+                        font-weight: bold !important;
+                    }
+
                 </style>
                 <script type="text/javascript">
                     PrimeFaces.locales['es'] = {
@@ -351,25 +362,7 @@
                                                 <div class="dropdown-menu widget-notifications no-padding" style="width: 300px">
                                                     <div class="notifications-list" id="main-navbar-notifications">
 
-                                                        <c:forEach items="#{auditLogController.getActivityLogs(UserSessionBean.current.idUsuario)}" var="item" varStatus="loop">
 
-
-
-                                                            <div class="notification">
-                                                                <div class="notification-title text-primary">#{item.idUser}</div>
-                                                                <div class="notification-description">
-                                                                    <strong><h:outputText value="[ref\##{item.idCaso}]"/></strong>:
-                                                                    #{item.idCampo eq null ? '':'ha cambiado el valor de '.concat(item.idCampo)} #{item.newValue}.</div>
-                                                                <div class="notification-ago" title="#{casoController.formatDate(item.fecha)}">#{casoController.prettyDate(item.fecha)}</div>
-
-                                                                <p:commandLink action="#{casoController.prepareEditPK(item.idCaso)}" 
-                                                                               rendered="#{not empty item.idCaso}"
-                                                                               ajax="false" styleClass="notification-icon fa fa-ticket" immediate="true">
-                                                                </p:commandLink>
-                                                            </div> <!-- / .notification -->
-
-
-                                                        </c:forEach>
 
 
 
@@ -844,8 +837,8 @@
                     }
 
                     function setStyleChatFrame(iframeid, posx) {
-                        var chatStyle = '.chatWindow' + iframeid + ' {position: absolute;right: ' + posx + 'px;bottom: 0px;box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);-webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);}';
-                        var chatButtonStyle = '.chatWindowButton' + iframeid + ' {position: absolute;right: ' + posx + 'px;bottom: 0px;}';
+                        var chatStyle = '.chatWindow' + iframeid + ' {position: fixed;right: ' + posx + 'px;bottom: 0px;box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);-webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);}';
+                        var chatButtonStyle = '.chatWindowButton' + iframeid + ' {position: fixed;right: ' + posx + 'px;bottom: 0px;}';
                         addStyleString(chatStyle);
                         addStyleString(chatButtonStyle);
                     }
@@ -867,7 +860,7 @@
                         var idFrame = "chatIFrame" + username;
                         var existentFrame = document.getElementById(idFrame);
                         if (existentFrame === null) {
-                            addStyleString('.chatWindowHidden {position: absolute;left: -1000px;top: -1000px;}');
+                            addStyleString('.chatWindowHidden {position: fixed;left: -1000px;top: -1000px;}');
                             var url = "http://www.godesk.cl:8090/golivechat/?type=internalReg&name=" + username + "&site=" + idsite +
                                     "&frameid=" + idFrame + "&referrer=" + document.referrer;
                             var chatIFrame = createChatIFrame(idFrame, url);
@@ -890,7 +883,7 @@
                         var idFrame = "chatIFrame" + client;
                         var existentFrame = document.getElementById(idFrame);
                         if (existentFrame === null) {
-                            addStyleString('.chatWindowHidden {position: absolute;left: -1000px;top: -1000px;}');
+                            addStyleString('.chatWindowHidden {position: fixed;left: -1000px;top: -1000px;}');
                             var jscall = "startChat;" + myusername + ";" + client + ";" + idsite;
                             var url = "http://www.godesk.cl:8090/golivechat/?type=startNewInternalChat&name=" +
                                     myusername + "&site=" + idsite + "&client=" + client + "&jscall=" + jscall +
@@ -916,7 +909,7 @@
                         var idFrame = "chatIFrame" + myusername;
                         var existentFrame = document.getElementById(idFrame);
                         if (existentFrame === null) {
-                            addStyleString('.chatWindowHidden {position: absolute;left: -1000px;top: -1000px;}');
+                            addStyleString('.chatWindowHidden {position: fixed;left: -1000px;top: -1000px;}');
                             var jscall = "joinInternalChat;" + myusername + ";" + client + ";" + idsite;
                             var url = "http://www.godesk.cl:8090/golivechat/?type=joinInternalChat&name=" +
                                     myusername + "&site=" + idsite + "&client=" + client + "&jscall=" + jscall +
