--- a/src/main/webapp/public/signup.xhtml
+++ b/src/main/webapp/public/signup.xhtml
@@ -80,7 +80,7 @@
                                 <span>1 mes de prueba gratis</span>
                             </div>
 
-                            <p:messages globalOnly="true"/>
+                            <p:messages />
 
                             <div class="form-group w-icon">
                                 <h:inputText id="signup_name" required="true" requiredMessage="Nombre completo is required"
@@ -105,6 +105,7 @@
                                              styleClass="form-control input-lg" value="#{signUpController.registrationVO.phoneNumber}" autocomplete="off"/> 
                                 <p:watermark for="signup_phone" value="Phone"/>
                                 <span class="fa fa-phone signup-form-icon"></span>
+                                <p class="help-block">Ej: +56 9 81393253</p>
                                 <h:message for="signup_phone" errorClass="text-danger"/>
                             </div>
 
@@ -198,7 +199,7 @@
 
                             <div class="form-actions">
                                 <p:commandButton id="submit" action="#{signUpController.signup()}" 
-                                                 styleClass="signup-btn bg-primary" update="@form @(:not(#recaptcha))"
+                                                 styleClass="signup-btn bg-primary" update="@form"
                                                  onclick="jQuery(this).addClass('ui-state-disabled')"
                                                  value="COMENZAR" />
 
